--- a/annonces-17.html
+++ b/annonces-17.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Conférence publique « Un modèle de polyculture-élevage aujourd’hui ; l’abbaye de Fontgombault » de Charles Leys">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
-  <meta name="description" content="La conférence publique « Un modèle de polyculture-élevage aujourd’hui ; l’abbaye de Fontgombault » de Charles Leys, référent projets agricoles (France), dans le cadre du projet « Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale » se tiendra le 22 novembre 2022 à 17h00.">
+  <meta name="description" content="La conférence publique « Un modèle de polyculture-élevage aujourd’hui ; l’abbaye de Fontgombault » de Charles Leys, référent projets agricoles (France), dans le cadre du projet « Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et intégration internationale » se tiendra le 22 novembre 2022 à 17h00.">
   
   
   <title>Conférence publique « Un modèle de polyculture-élevage aujourd’hui ; l’abbaye de Fontgombault » de Charles Leys</title>
@@ -162,7 +162,7 @@
             <div class="col-md-12 col-lg-10">
                 
                 
-                <p class="mbr-text mbr-fonts-style display-7">La conférence publique « Un modèle de polyculture-élevage aujourd’hui ; l’abbaye de Fontgombault » de <a href="leys.html" class="text-secondary" target="_blank">Charles Leys</a>, référent projets agricoles (France), dans le cadre du projet <a href="projets-7.html" class="text-secondary text-primary" target="_blank">« Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale »</a> se tiendra <strong>le 22 novembre 2022 à 17h00</strong>.
+                <p class="mbr-text mbr-fonts-style display-7">La conférence publique « Un modèle de polyculture-élevage aujourd’hui ; l’abbaye de Fontgombault » de <a href="leys.html" class="text-secondary" target="_blank">Charles Leys</a>, référent projets agricoles (France), dans le cadre du projet <a href="projets-7.html" class="text-secondary text-primary" target="_blank">« Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et intégration internationale »</a> se tiendra <strong>le 22 novembre 2022 à 17h00</strong>.
 <br>
 <br>Tout le monde est le bienvenu.
 <br> 
@@ -191,7 +191,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HuDpsdTqcwpz8dVXjSnr5A7eRk1oMC/RhQDYtvuzodXfWrlG5dPz4qlsOe+aUD7dXxrpDdSewgEiPGeRAJRcd9O+uSr6AznclU7BR6T1Dudb2sd8P8VhWrbWNezhnFaF">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZBufzsurM3uSQzWTUlO4nMpxeaR4hWcKuMYpKpfMG7mZWOYZMa/VJCvi/jq4BByKTILTi4LU93XPtjFDCmNemXxNrLtvxlYYBdzutuPywTclMgxBRoKHKXLYB0ZiJKcE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -284,7 +284,7 @@
             </div>
         </div>
     </div>
-</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
