--- a/annonces-6.html
+++ b/annonces-6.html
@@ -176,7 +176,7 @@ Les citoyens de la Fédération de Russie, étudiants et doctorant, qui ont reç
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zrO14oExt+Mqt+Q2qhwg+oxsIB2819TeyUFOWDhD4UQo1po4EJoXnp2qe6o1XIRGhpDp0floTNcsxRsknwyZVQhQ43ENqF77ROLJGRSWdbBzjGgUaiBiYr4QB53MgGnD">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Jgp40Sl8zS+K9N+QpMERaFgngyI1V7JLnKcBttBPwgPAojrqabHg8wFVaCBZP0zEd/PIRjlaAJyP8N8zB2X/0y+GIDVCDySREr1S+b33Ofy3uizck1oCvDy3L72hHIOB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -269,7 +269,7 @@ Les citoyens de la Fédération de Russie, étudiants et doctorant, qui ont reç
             </div>
         </div>
     </div>
-</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
