--- a/leys.html
+++ b/leys.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/leys-meta.jpg">
   <meta property="og:image" content="assets/images/leys-meta.jpg">
-  <meta name="twitter:title" content="Charles LEYS, référent projets agricoles">
+  <meta name="twitter:title" content="Charles LEYS, référent de projets agricoles">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
   <meta name="description" content="Né en 1977, marié et père de six enfants, il débute avec une formation de charpentier chez les Compagnons du Devoir, travaille dans le bâtiment, et baroude très vite en Asie Centrale dans le cadre de sa spécialisation de fabricant de yourtes.Il mène depuis dix ans un travail de recherche sur l'islamisme et les phénomènes de radicalisation. ">
   
   
-  <title>Charles LEYS, référent projets agricoles</title>
+  <title>Charles LEYS, référent de projets agricoles</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -115,7 +115,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-12">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1"><strong>Charles LEYS</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><strong>Référent projets agricoles</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><strong>Référent de projets agricoles</strong></h4>
                 
             </div>
         </div>
@@ -146,7 +146,7 @@
 <br>
 <br>Il anime par ailleurs le Cercle Marie Papin, cercle d’étude de la philosophie politique et de la pensée légitimiste, via la bibliothèque <a href="https://viveleroy.net" class="text-secondary" target="_blank">viveleroy.net</a>, en vue de la restauration de la monarchie traditionnelle française.
 <br>
-<br>Proposition de projets&nbsp;: <a href="projet-5.html" class="text-secondary">Production de porcs fermiers en plein air. Transformation et commercialisation de viande et plats préparés</a>.&nbsp;<br><br>Projet en cours : <a href="projets-7.html" class="text-secondary">Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale</a>.<br><br><a href="actualites-17.html" class="text-secondary">Visite de Charles Leys, référent projets agricoles (France), à l’UPESR</a><br></p>
+<br>Proposition de projets&nbsp;: <a href="projet-5.html" class="text-secondary">Production de porcs fermiers en plein air. Transformation et commercialisation de viande et plats préparés</a>.&nbsp;<br><br>Projet en cours : <a href="projets-7.html" class="text-secondary">Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et intégration internationale</a>.<br><br><a href="actualites-17.html" class="text-secondary">Visite de Charles Leys, référent projets agricoles (France), à l’UPESR</a><br></p>
                             
                         </div>
                     </div>
@@ -166,7 +166,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="H3rLqtYheRDJy62GGuw43q6YZP37jN0Lq5tydVuwLSl0Eaa9rbszmBHCebATiXznTb7AZDRXmYOtkT+JMpoJzVaGcXya8DEsvDcXFgscfdmIUmqVRn3ZuJCaGDUXnbWm">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Joo89P7F9PamdlDNQmvbXqSxd4EArg5C2OYnylWKK2VM4yKI5Hds01LEi63MEiFTxcN2KWtK4W/Ou0MKkUJwkaZ4hW8Fk/L399LKQiYzu1i9k1sZ8I4/YnpEqL2p8Od3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -259,7 +259,7 @@
             </div>
         </div>
     </div>
-</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
