--- a/projets-7.html
+++ b/projets-7.html
@@ -8,13 +8,15 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/projets-7-meta.jpg">
   <meta property="og:image" content="assets/images/projets-7-meta.jpg">
-  <meta name="twitter:title" content="Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale">
+  <meta name="twitter:title" content="Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et intégration internationale">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
-  <meta name="description" content="À l'heure actuelle, de nombreux Russes et Français recherchent un équilibre entre les technologies modernes, les principes ESG et un mode de vie sain traditionnel au sein de la nature. Nos cultures ont beaucoup en commun et se complètent harmonieusement.">
+  <meta name="description" content="À l'heure actuelle, de nombreux Russes et Français recherchent un équilibre entre les technologies modernes, les principes ESG et un mode de vie sain traditionnel au sein de la nature. Nos cultures ont beaucoup en commun et se complètent harmonieusement.
+
+La Fédération de Russie a une vaste superficie à faible densité de population, à l'exception de quelques agglomérations. Ainsi, le potentiel inhérent à notre pays n'est pas bien utilisé.">
   
   
-  <title>Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale</title>
+  <title>Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et intégration internationale</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -113,7 +115,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-12">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1"><strong>Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale</strong></h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1"><strong>Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et intégration internationale</strong></h3>
                 
                 
             </div>
@@ -201,7 +203,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="pX6HtxJCNK3zpT7BMy3D7YwUPEa+bh/mFQJQiiVj+H2IeerGbnv1tAZy043FNXNzE0Hqv8dh33BFEsY5l0TTl5bo4R/r/1xysWnpY4AOytMHAEcVSJmV7n6fTzSEAn3W">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5oXbaSFTvqlbj49YHDftsOLBWK/WSY9BGtgeX1SF2zwymB4bl5MZsChN/P5fQLobvG1nwtMe4TdQnbM1oZbBQO6Bvs18W5AC3dGi+QVVIuX1g6gsERIFjsmb4dty4a43">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -294,7 +296,7 @@
             </div>
         </div>
     </div>
-</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
